# llvm-ob-passes

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
dummy-test/: test.c
include/: BogusControlFlowPass.h  ExamplePass.h
include/Pluto/: BogusControlFlowPass.h  CryptoUtils.h  Flattening.h  GlobalEncryption.h  IndirectCall.h  MBAObfuscation.h  MBAUtils.h  Substitution.h
lib/: BogusControlFlowPass.cpp  ExamplePass.cpp  PassRegistration.cpp
lib/Pluto/: BogusControlFlowPass.cpp  CryptoUtils.cpp  Flattening.cpp  GlobalEncryption.cpp  IndirectCall.cpp  MBAObfuscation.cpp  MBAUtils.cpp  Substitution.cpp
tests/: test.c  tests.cpp
wrapper/: wrapper.cpp
